test/files/neg/t0590.scala
object Test {
  implicit def foo[T] : T = null
}
